// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

import "google/api/annotations.proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc SayBonjour (HelloRequest) returns (HelloReply) {
    // required for Envoy JSON-transcoding
    option (google.api.http) = {
      post: "/bonjour"
    };
  }

  rpc SayHi (HelloRequest) returns (HelloReply) {
    // required for Envoy JSON-transcoding
    option (google.api.http) = {
      post: "/helloworld.Greeter/SayHi" // breaks GRPC calls
    };
  }
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
